Decreased spacing to fix issue with Helvetica
I noticed on devices using Helvetica Neue that the 2px spacing was too
wide for the collapsed navbar.

--- a/src/documents/styles/style.css.styl
+++ b/src/documents/styles/style.css.styl
@@ -135,7 +135,7 @@ blockquote, .site-title, .site-page, .blog-post-date, .archivedPost, .post-conte
     border-radius 2px
 
 .spacedapart
-  letter-spacing 2px
+  letter-spacing 1px
 
 .blog-post-title, .page-title, .blog-post, blog-page
   margin-bottom 16px
